# magic

./: .gitignore  README.md
src/: CMakeLists.txt  __init__.py  magicWrapper.c  magicWrapper.h  pythonWrapper.cpp
